[workspace]

members = [
    "stream",
    "priority",
]

[package]
name = "kiruna"
version = "0.1.0"
authors = ["Drew Crawford <drew@sealedabstract.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
sync = []
io_stream = ["stream"]
io_seek = ["seek"]
# enable test_await fn
test = []
# Various API to work with futures
futures = []
# API to join futures
join = []
all = ["sync","io_stream","test","futures","join","io_seek"]

[dependencies]
stream = {path = "stream", optional=true}
priority = {path = "priority" }
seek = {path = "seek", optional=true}