[workspace]

members = [
    "stream",
    "priority",
    "join",
    "tpc"
]

[package]
name = "kiruna"
version = "0.1.0"
authors = ["Drew Crawford <drew@sealedabstract.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
sync = []
io_stream = ["stream"]
io_seek = ["seek"]
# enable test_await fn
test = []
# Various API to work with futures
futures = []
# API to join futures
join = ["kiruna_join"]
all = ["sync","io_stream","test","futures","join","io_seek","tpc"]
# experimental, currently excluded from all.
tpc = ["kiruna_tpc"]
tpc_stories = ["kiruna_tpc/thread_stories"]

[dependencies]
stream = {path = "stream", optional=true}
priority = {path = "priority" }
seek = {path = "seek", optional=true}
kiruna_join = {path = "join",optional=true}
kiruna_tpc = {path = "tpc", optional=true}
