
[package]
name = "kiruna_block_party"
version = "0.1.0"
authors = ["Drew Crawford <drew@sealedabstract.com>"]
edition = "2021"

[dependencies]
priority = {path = "../priority"}
crossbeam-channel = "~0"
once_cell = "~1"
spawn = {path = "../spawn"}
atomic-waker = "~1"

[dev-dependencies]
kiruna = {path = "../",features=["test","sync"]}
rand = "~0"