[package]
name = "seek"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "~1"
pcore = {git = "https://github.com/drewcrawford/pcore"}

[target.'cfg(target_os="windows")'.dependencies]
windows = {version = "~0",features=["Storage","Foundation","Storage_Streams","Storage_FileProperties","Win32_System_WinRT"]}
kiruna_join = {path = "../join"}

[dev-dependencies]
kiruna = {path = "../", features=["test"]}

