[package]
name = "seek"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "~1"
pcore = {git = "https://github.com/drewcrawford/pcore"}
boil = {git = "https://github.com/drewcrawford/boil"}
priority = {path = "../priority"}
kiruna_futures = {path = "../futures"}
[target.'cfg(target_os="windows")'.dependencies]
windows = {version = "~0",features=["Storage","Foundation","Storage_Streams","Storage_FileProperties","Win32_System_WinRT"]}
kiruna_join = {path = "../join"}

[target.'cfg(target_os="macos")'.dependencies]
dispatchr = {git = "https://github.com/drewcrawford/dispatchr"}
blocksr = {git = "https://github.com/drewcrawford/blocksr", features=["continuation"]}

[dev-dependencies]
kiruna = {path = "../", features=["test"]}

