[package]
name = "spawn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
priority = {path = "../priority"}

widestring = "~1"

[target.'cfg(target_os="windows")'.dependencies.windows]
version = ">=0.41"
features = ["Win32_System_Threading","Win32_Foundation","Win32_Security"]
