[package]
name = "stream"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dispatchr = {path = "../../dispatchr"}
blocksr = {git = "https://github.com/drewcrawford/blocksr",features=["continuation"]}
priority = {path = "../priority"}

[dev-dependencies]
kiruna = {path = "../kiruna", features=["test"]}

[target.'cfg(target_os="macos")'.dev-dependencies]
libc = "0.2.101" # used in stream-read tests
