[package]
name = "stream"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

priority = {path = "../priority"}

[target.'cfg(target_os="macos")'.dependencies]
dispatchr = {path = "../../dispatchr"}
blocksr = {git = "https://github.com/drewcrawford/blocksr",features=["continuation"]}

[target.'cfg(target_os="windows")'.dependencies]
winbind = {path = "../winbind"}
once_cell = "1.8.0"

[dev-dependencies]
kiruna = {path = "../", features=["test"]}

[target.'cfg(target_os="macos")'.dev-dependencies]
libc = "0.2.101" # used in stream-read tests
