[package]
name = "stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

priority = {path = "../priority"}

[target.'cfg(target_os="macos")'.dependencies]
dispatchr = {git = "https://github.com/drewcrawford/dispatchr"}
blocksr = {git = "https://github.com/drewcrawford/blocksr",features=["continuation"]}

[target.'cfg(target_os="windows")'.dependencies]
once_cell = "1.8.0"
windows = {version = "~0", features=["Win32_Foundation","Win32_System_IO","Win32_Storage","Win32_System_Diagnostics","Win32_Storage_FileSystem","Win32_System_Threading","Win32_Security","Win32_System_Diagnostics_Debug","Win32_System_Memory"]}

[dev-dependencies]
kiruna = {path = "../", features=["test"]}

[target.'cfg(target_os="macos")'.dev-dependencies]
libc = "0.2.101" # used in stream-read tests
