[package]
name = "kiruna_tpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
priority = {path = "../priority"}
once_cell = "~1"
#libc = "~0"
crossbeam-channel = "~0"


[target.'cfg(target_os="macos")'.dependencies]
dispatchr = {git = "https://github.com/drewcrawford/dispatchr"}

[dependencies.rand]
optional = true
version = "~0"

[features]
# prints some debug information about what threads are up to
thread_stories = ["rand"]

[dev-dependencies]
kiruna = {path = "../", features=["test"]}
criterion = "~0"

[[bench]]
name = "vec"
harness = false